add NONE button

--- a/html/worker_template.html
+++ b/html/worker_template.html
@@ -47,6 +47,7 @@ $(document).ready(function() {
         <button class="btn btn-secondary option">EN</button>
         <button class="btn btn-secondary option">FR</button>
         <button class="btn btn-secondary option">FI</button>
+        <button class="btn btn-secondary option">NONE</button>
       </div>
       <input type="hidden" name="language">
     </div>
